[workspace]
members = ["node", "sink"]
resolver = "2"


[workspace.dependencies]
# dora-node-api = "0.3.5" # { path = "../../../dora/apis/rust/node" }
# dora-node-api = { path = "../../../dora/apis/rust/node", default-features = false, features = [
#     "tracing",
# ] }
dora-node-api = { git = "https://github.com/arceos-org/dora.git", branch = "noshmem-arceos", default-features = false }
